--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -221,7 +221,7 @@ jobs:
         run: pnpm install
 
       - name: Run security audit
-        run: pnpm audit --audit-level moderate || true
+        run: pnpm audit --audit-level high || true
 
       - name: Run Snyk security scan
         uses: snyk/actions/node@master
