--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -59,7 +59,7 @@ jobs:
         run: pnpm install
 
       - name: Run security audit
-        run: pnpm audit --audit-level moderate
+        run: pnpm audit --audit-level high
 
       - name: Check for known vulnerabilities
         run: pnpm audit --json > audit-results.json || true
