--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.18.1"
+  "packageManager": "pnpm@10.18.1",
+  "pnpm": {
+    "overrides": {
+      "validator": "^13.16.0"
+    }
+  }
 }
